feat: update preferences
